feat: implement endpoints in core backend